--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,34 @@
-# Ignorar todos los videos
+# Archivos compilados de Python
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Archivos temporales y de caché
+*.pyc
+*.pyo
+*.pyd
+.Python
+
+# Archivos de entorno virtual
+venv/
+env/
+ENV/
+
+# Archivos de IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Archivos del sistema
+.DS_Store
+Thumbs.db
+
+# Archivos temporales de Excel
+~$*.xlsx
+~$*.xls
+
+# Ignorar videos grandes (mantener uno pequeño como ejemplo)
 *.mp4
 *.avi
 *.mov
