Agregar comparación teórica vs experimental y videos de datos
-  Nueva funcionalidad: Análisis comparativo con trayectoria teórica
-  Métricas automáticas: R, RMSE, MAE
-  Gráficas comparativas experimentales vs teóricas
-  Ajuste automático de modelo parabólico
-  Análisis estadístico detallado en consola
-  Incluir videos de datos (PV_1.mp4, PV_2.mp4, PV_3.mp4, PV_4.mp4)
-  README actualizado con nueva documentación

--- a/.gitignore
+++ b/.gitignore
@@ -27,9 +27,14 @@ Thumbs.db
 ~$*.xlsx
 ~$*.xls
 
-# Ignorar videos grandes (mantener uno pequeño como ejemplo)
+# Ignorar videos grandes EXCEPTO los de la carpeta data
 *.mp4
 *.avi
 *.mov
 *.mkv
 *.flv
+
+# Permitir videos de ejemplo en la carpeta data
+!data/*.mp4
+!data/*.avi
+!data/*.mov
