Fix: Restaurar funciones de análisis teórico y corregir dependencias
-  Restaurar funciones faltantes en utils.py:
  - ajustar_modelo_parabolico()
  - calcular_trayectoria_teorica()
  - calcular_velocidad_teorica()
  - graficar_comparacion_teorica()
  - calcular_metricas_error()

-  Agregar import numpy as np faltante
-  Corregir ruta de video en main.py (PV_5.mp4  PV_1.mp4)
-  Implementar comparación experimental vs teórica completa
-  Agregar métricas de ajuste (R, RMSE, MAE)
-  Resolver problema de segunda gráfica que no aparecía

Ahora el análisis teórico funciona correctamente mostrando:
- Comparación posición X vs tiempo
- Comparación posición Y vs tiempo
- Trayectoria X vs Y
- Velocidades experimentales vs teóricas
- Parámetros del modelo parabólico
- Estadísticas de bondad de ajuste

--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,6 @@
-# Archivos compilados de Python
-*.py[cod]
-*$py.class
-
-# Archivos temporales y de caché
-*.pyc
-*.pyo
-*.pyd
-.Python
-
-# Archivos de entorno virtual
-venv/
-env/
-ENV/
-
-# Archivos de IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-
-# Archivos del sistema
-.DS_Store
-Thumbs.db
-
-# Archivos temporales de Excel
-~$*.xlsx
-~$*.xls
-
-# Ignorar videos grandes EXCEPTO los de la carpeta data
+# Ignorar todos los videos
 *.mp4
 *.avi
 *.mov
 *.mkv
 *.flv
-
-# Permitir videos de ejemplo en la carpeta data
-!data/*.mp4
-!data/*.avi
-!data/*.mov
