Update: Incluir carpeta data con videos del proyecto
-  Modificar .gitignore para permitir videos en carpeta data
-  Agregar PV_5.mp4 faltante
-  Asegurar que todos los videos de prueba estén disponibles
-  Mantener exclusión de videos en otras ubicaciones

Videos incluidos:
- data/PV_1.mp4
- data/PV_2.mp4
- data/PV_3.mp4
- data/PV_4.mp4
- data/PV_5.mp4

Ahora el repositorio incluye todos los datos necesarios para ejecutar el proyecto.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
-# Ignorar todos los videos
+# Ignorar videos en general, EXCEPTO los de la carpeta data
 *.mp4
 *.avi
 *.mov
 *.mkv
 *.flv
+
+# Permitir videos en la carpeta data (sobrescribir la regla anterior)
+!data/*.mp4
+!data/*.avi
+!data/*.mov
+!data/*.mkv
+!data/*.flv
